--- a/Mudassir/templates/index.html
+++ b/Mudassir/templates/index.html
@@ -204,5 +204,16 @@
 
         <!--===== MAIN JS =====-->
         <script src="{% static 'assets/js/main.js' %}"></script>
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-52QMG8XVSG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-52QMG8XVSG');
+</script>
+        
     </body>
 </html>
